option java_package = "mil.nga.giat.geowave.datastore.hbase.query.protobuf";
option java_outer_classname = "VersionProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message VersionRequest {

}
message VersionResponse {
  repeated string versionInfo = 1;
}
service VersionService {
  rpc version(VersionRequest)
    returns (VersionResponse);
}